<resources>
    <string name="app_name">Contacts_Application</string>
    <string name="add_contact">Add Contact</string>
    <string name="Done">Done</string>
    <string name="use_to_add_contacts">Use \'+\' to add contacts</string>
    <string name="exit">exit</string>
    <string name="contact_full_name">Contact full name</string>
    <string name="contact_phone_number">Contact phone number</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_address">Contact Address</string>
    <string name="contact_birthday">Contact Birthday</string>
    <string name="profile_image">profile image</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="birth_day">birth day</string>
    <string name="enter_full_name">Enter full name:</string>
    <string name="enter_phone_number">Enter phone number:</string>
    <string name="enter_email">Enter email:</string>
    <string name="enter_address">Enter address:</string>
    <string name="enter_birthday">Enter birthday:</string>
    <string name="enter_gender">Enter gender:</string>
    <string name="enter_email_login">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign up</string>
</resources>