<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.Activity_Contact_Details"
    android:background="#F4F3EE">

    <ImageButton
        android:layout_width="44dp"
        android:layout_height="46dp"
        android:id="@+id/details_BTN_exit"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_exit"
        style="@style/buttonStyle">

    </ImageButton>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/ic_contact"
            android:contentDescription="@string/profile_image"
            app:tint="#463F3A">

        </ImageView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_name"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/full_name" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/full_name"
                    android:src="@drawable/ic_full_name"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_phone"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"

                    android:text="@string/phone_number" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/phone_number"
                    android:src="@drawable/ic_phone"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_gender"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/gender" />

                <ImageView
                    android:id="@+id/details_IMG_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/gender"
                    android:src="@drawable/ic_gender_none"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_address"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/address" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/address"
                    android:src="@drawable/ic_address"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_email"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/email" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/email"
                    android:layout_weight="2"
                    android:src="@drawable/ic_email"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/details_LBL_birthday"
                    style="@style/contactDetailsTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/birth_day"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/birth_day"
                    android:layout_weight="2"
                    android:src="@drawable/ic_birthday"
                    >

                </ImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginTop="10dp">

            </View>
        </androidx.appcompat.widget.LinearLayoutCompat>









    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>